--- a/src/Sesile/UserBundle/Resources/views/Hierarchie/edit.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Hierarchie/edit.html.twig
@@ -46,16 +46,26 @@
 
             <div class="col-lg-4 col-lg-push-1">
 	        {#<div id="edit_service">#}
-                {% if groupe is defined %}
-                    <input type="hidden" name="id" id="id_groupe" value="{% if groupe is defined %}{{ groupe.id }}{% endif %}"/>
-                {% endif %}
-                Nom du service&nbsp;:&nbsp;
-                <input type="text" name="nom" class="form-control" id="nom_groupe"{% if groupe is defined %} value="{{ groupe.Nom }}" {% endif %}/>
-                &nbsp;&nbsp;
 
-                <button id="btn-envoyer" type="button" class="btn btn-success btn-envoyer sesiletooltip" data-original-title="Enregistrer">
-                    <span class="glyphicon glyphicon-ok" style="color: #ffffff"></span>
-                </button>
+                <div class="row">
+                    <a class="btn btn-default col-md-11" href="{{ path('groupes') }}">Retour aux services organisationnels</a>
+                </div>
+
+                <div class="row">&nbsp;</div>
+
+                <div class="row">
+                    {% if groupe is defined %}
+                        <input type="hidden" name="id" id="id_groupe" value="{% if groupe is defined %}{{ groupe.id }}{% endif %}"/>
+                    {% endif %}
+                    Nom du service&nbsp;:&nbsp;
+                    <input type="text" name="nom" class="form-control" id="nom_groupe"{% if groupe is defined %} value="{{ groupe.Nom }}" {% endif %}/>
+                    &nbsp;&nbsp;
+
+                    <button id="btn-envoyer" type="button" class="btn btn-success sesiletooltip" data-original-title="Enregistrer">
+                        <span class="glyphicon glyphicon-ok" style="color: #ffffff"></span>&nbsp;&nbsp;Enregistrer
+                    </button>
+                </div>
+
             </div>
         </div>
 		{% include 'SesileUserBundle:Hierarchie:tools.html.twig' %}
