--- a/web/css/style.css
+++ b/web/css/style.css
@@ -464,8 +464,12 @@ label{
 	height: 2em;
 	min-width:5em;
 	line-height: 18px;
-	padding: 4px 4px 4px 5px;
+	/*padding: 4px 4px 4px 5px;*/
+    padding-top: 4px;
 	text-shadow: 0 1px 0 #ffffff;
+}
+#s2id_selectuser {
+    width: 100%;
 }
 .delegdo{
 	color: #83B13A;
@@ -725,17 +729,19 @@ select [name=user] {
 
 .status_classeur {
     display: inline-block;
-    padding: 6px 12px;
+    padding: 5px 10px;
     margin-bottom: 0;
-    font-size: 14px;
+    margin-top: -15px;
+    font-size: 12px;
     font-weight: normal;
-    line-height: 1.428571429;
+    line-height: 1;
+    /*line-height: 1.428571429;*/
     text-align: center;
     white-space: nowrap;
     vertical-align: middle;
     background-image: none;
-    border: 1px solid transparent;
-    border-radius: 4px;
+    border: 0px solid transparent;
+    border-radius: 0px;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
