Résolutions des bugs  : 0002391

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/boutons_action.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/boutons_action.html.twig
@@ -1,11 +1,21 @@
 {% if classeur.isValidableByDelegates(usersdelegated) %}
 
-    {% if signable %}
-        <button type="submit" class="btn btn-success btn-valider-signer"
-                data-action="{{ path('signform',{'id':classeur.id}) }}">
+    {#{% if signable %}#}
+    {% if classeur.getType.id == 2 %}
+        <button type="submit" class="btn btn-success btn-valider-signer" data-action="{{ path('signform',{'id':classeur.id}) }}">
             <span class="glyphicon glyphicon-ok"></span>
             &nbsp;Valider et Signer
         </button>
+
+        <button type="submit" class="btn btn-success btn-valider-non-signer" data-action="{{ path("classeur_valider") }}">
+            <span class="glyphicon glyphicon-ok"></span>
+            &nbsp;Valider
+        </button>
+
+        {#<button type="submit" class="btn btn-success btn-valider-signer" data-action="{{ path('signform',{'id':classeur.id}) }}">
+            <span class="glyphicon glyphicon-ok"></span>
+            &nbsp;Valider et Signer
+        </button>#}
 
     {% else %}
         <button type="submit" class="btn btn-success btn-valider" data-action="{{ path("classeur_valider") }}">
