--- a/src/Sesile/UserBundle/Resources/views/Hierarchie/edit.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Hierarchie/edit.html.twig
@@ -27,7 +27,7 @@
 	</div>
 	{% include 'SesileUserBundle:Hierarchie:legende.organigramme.html.twig' %}
 
-	<form id="form_hierarchy" method="post" action="{% if groupe is defined %}{{ path("update_groupe") }} {% else %}{{ path("new_groupe") }} {% endif %}">
+	<form id="form_hierarchy" method="post" action="{% if groupe is defined %}{{ path("update_service") }} {% else %}{{ path("new_service") }} {% endif %}">
         <div class="row">
             <div class="col-lg-12 col-lg-push-1">
                 <h4>Choisir les types de classeur du service</h4>
@@ -48,7 +48,7 @@
 	        {#<div id="edit_service">#}
 
                 <div class="row">
-                    <a class="btn btn-default col-md-11" href="{{ path('groupes') }}">Retour aux services organisationnels</a>
+                    <a class="btn btn-default col-md-11" href="{{ path('services') }}">Retour aux services organisationnels</a>
                 </div>
 
                 <div class="row">&nbsp;</div>
