--- a/web/css/select2.css
+++ b/web/css/select2.css
@@ -531,7 +531,7 @@ disabled look for disabled choices in the results dropdown
 
     font-size: 1px;
     outline: none;
-    background: url('../../../../Downloads/select2-3.4.5/select2.png') right top no-repeat;
+    background: url('/images/select2.png') right top no-repeat;
 }
 
 .select2-container-multi .select2-search-choice-close {
