Conflicts: 	app/config/config_evolutions.yml

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/index.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/index.html.twig
@@ -41,7 +41,7 @@
                     sClass: "center"
                 },
                 {
-                    aTargets: [2],
+                    aTargets: [2, 3, 4],
                     sClass: "center"
                 },
                 {
