--- a/src/Sesile/CircuitBundle/Resources/views/Circuit/new.html.twig
+++ b/src/Sesile/CircuitBundle/Resources/views/Circuit/new.html.twig
@@ -1,3 +1,55 @@
+<div class="row">
+    <div class="col-lg-12">
+        <div id="contetapes">
+            {% for etape in service.etapeGroupes %}
+
+                <div class="col-lg-2 well etapes-circuit">
+                    <div class="text-center"><h4>Etape de validation {{ loop.index }}</h4></div>
+                    {#<input type="hidden" name="etape_id" value="{{ etape.id }}">#}
+                    <select class="selusers" multiple="multiple" style="width: 100%" data-etape="{{ etape.id }}">
+                        <optgroup label="Groupes d'utilisateurs">
+                            {% for userPack in userPacks %}
+                                <option value="userpack-{{ userPack.id }}" {% if userPack in etape.userPacks %} selected{% endif %} data-type="groupe">{{ userPack.nom }}</option>
+                            {% endfor %}
+                        </optgroup>
+                        <optgroup label="utilisateurs">
+                            {% for user in users %}
+                                <option value="user-{{ user.id }}" data-etape="{{ etape.id }}" data-type="user" {% if user in etape.users %} selected{% endif %}>{{ user.prenom }} {{ user.nom }}</option>
+                            {% endfor %}
+                        </optgroup>
+                    </select>
+                    <button type="button" class="btn btn-danger btn-suppetape" id="suppetape"><span class="glyphicon glyphicon-minus-sign"></span> Supprimer cette étape</button>
+                </div>
+            {% endfor %}
+        </div>
+        <div class="col-lg-2 text-center">
+            <input type="hidden" name="valeurs" id="valeurs">
+            <button type="button" class="btn btn-info btn-ajout-etape" id="addetape"><span class="glyphicon glyphicon-plus-sign"></span><br>Ajouter une étape</button>
+        </div>
+    </div>
+</div>
+
+<script type="text/javascript" src="{{ asset('/js/jquery-ui.min.js') }}"></script>
+<script type="text/javascript" src="{{ asset('/js/circuit_etape.js') }}"></script>
+<link rel="stylesheet" href="{{ asset('/css/circuit.css') }}"/>
+<script>
+    $(document).ready(function() {
+
+        $(document).on('click', '#addetape', function (e) {
+            /*
+             A chaque fois qu'on clicque sur le bouton bleu une nouvelle etape de validation se crée
+             */
+            $('#contetapes').append('' +
+            '<div class="col-lg-2 well etapes-circuit"><div class="text-center"><h4>Etape de validation</h4></div><select class="selusers" multiple="multiple" style="width: 100%" data-etape="0"><optgroup label="Groupes d\'utilisateurs">{% for userPack in userPacks %}<option value="userpack-{{ userPack.id }}" data-type="groupe">{{ userPack.nom }}</option>{% endfor %}</optgroup><optgroup label="utilisateurs">{% for user in users %}<option value="user-{{ user.id }}" data-type="user">{{ user.prenom }} {{ user.nom }}</option>{% endfor %}</optgroup></select><button type="button" class="btn btn-danger btn-suppetape" id="suppetape"><span class="glyphicon glyphicon-minus-sign"></span> Supprimer cette étape</button></div>');
+            $("select.selusers").select2();
+
+            e.stopImmediatePropagation();
+
+        });
+    });
+</script>
+{#
+
 <link rel="stylesheet" href="{{ asset('/css/circuit.css') }}"/>
 <div class="top_selects_circuits">
 
@@ -16,23 +68,6 @@
         <span id="useradd_btn" class="glyphicon glyphicon-chevron-down"></span>
     </div>
 
-
-    <!--
-    <div class="selects_circuit">
-        <div class="titre_select">
-            <label class="nametitle">
-                <span class="glyphicon glyphicon-search"></span>
-                &nbsp;&nbsp;Circuits&nbsp;&nbsp;</label>
-            <input class="nameinput" type="text">
-        </div>
-        <div id="circuits_list">
-            {% for circuit in circuits %}
-                <p data-id="{{ circuit.id }}" data-ordre="{{ circuit.ordre }}">{% if circuit.groupe == 1 %}<span class="glyphicon glyphicon-th-large"></span>{% endif %} {{ circuit.name }}</p>
-            {% endfor %}
-        </div>
-        <span id="circuitadd_btn" class="glyphicon glyphicon-chevron-down"></span>
-    </div>
-    -->
 </div>
 
 
@@ -68,3 +103,4 @@
     });
     // $("#users_complete").autocomplete({ lookup: users_list });
 </script>
+#}
