--- a/src/Sesile/UserBundle/Resources/views/SO/edit.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/SO/edit.html.twig
@@ -7,7 +7,7 @@
             &nbsp;&nbsp;&nbsp;Editer un service organisationnel
         </div>
 
-        <form action="" class="form-horizontal" method="post" id="form">
+        <form action="{{ path('modify_serviceorg', {id:service.id}) }}" class="form-horizontal" method="post" id="form">
 
             <div class="row">
                 <label for="nom" class="col-lg-1 control-label">Nom</label>
@@ -18,10 +18,19 @@
             <br>
             <div class="row ">
                 <label for="nom" class="col-lg-2 control-label">Types de classeur</label>
-                <div class="col-lg-6">
+                <div class="col-lg-8">
+                    <div class="row">
                     {% for type in types %}
-                        <input type="checkbox" name="types[]" {% if type in service.types %}checked{% endif %} value="{{ type.id }}"/>&nbsp;&nbsp;{{ type.nom }}<br>
+
+                        <div class="col-lg-1 text-right">
+                            <input type="checkbox" name="types[]" {% if type in service.types %}checked{% endif %} value="{{ type.id }}" id="types_classeur_{{ type.id }}"/>
+                        </div>
+                        <div class="col-lg-2 text-left">
+                            <label for="types_classeur_{{ type.id }}">{{ type.nom }}</label>
+                        </div>
+
                     {% endfor %}
+                    </div>
                 </div>
             </div>
             <br>
@@ -30,34 +39,38 @@
                     <div id="contetapes">
                         {% for etape in service.etapeGroupes %}
 
-                        <div class="col-lg-2 well" >
-                            <div>Etape de validation</div>
-                            <select class="selusers " multiple="multiple" style="width: 100%">
+                        <div class="col-lg-2 well">
+                            <div class="text-center"><h4>Etape de validation</h4></div>
+                            {#<input type="hidden" name="etape_id" value="{{ etape.id }}">#}
+                            <select class="selusers" multiple="multiple" style="width: 100%" data-etape="{{ etape.id }}">
                                 <optgroup label="Groupes d'utilisateurs">
                                     {% for userPack in userPacks %}
-                                        <option  value="userpack-{{ userPack.id }}" {% if userPack in etape.userPacks %} selected{% endif %} data-type="groupe">{{ userPack.nom }}</option>
+                                        <option value="userpack-{{ userPack.id }}" {% if userPack in etape.userPacks %} selected{% endif %} data-type="groupe">{{ userPack.nom }}</option>
                                     {% endfor %}
                                 </optgroup>
                                 <optgroup label="utilisateurs">
                                     {% for user in users %}
-                                        <option  value="user-{{ user.id }}" data-type="user" {% if user in etape.users %} selected{% endif %}>{{ user.prenom }} {{ user.nom }}</option>
+                                        <option value="user-{{ user.id }}" data-etape="{{ etape.id }}" data-type="user" {% if user in etape.users %} selected{% endif %}>{{ user.prenom }} {{ user.nom }}</option>
                                     {% endfor %}
                                 </optgroup>
                             </select>
                         </div>
                         {% endfor %}
                     </div>
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-lg-6">
-                    <button type="button" class="btn btn-info" id="addetape"><span class="glyphicon glyphicon-plus-sign"></span>&nbsp;&nbsp;Ajouter une etape de validation</button>
+                    <div class="col-lg-2 text-center">
+                        <button type="button" class="btn btn-info btn-ajout-etape" id="addetape"><span class="glyphicon glyphicon-plus-sign"></span><br>Ajouter une étape</button>
+                    </div>
                 </div>
             </div>
             <br><br>
             <div class="form-group">
                 <div class="col-lg-6">
                     <input type="submit" class="btn btn-success" value="Enregistrer le service organisationnel">
+                </div>
+                <div class="col-lg-2">
+                    <a class="btn btn-primary pull-right" href="{{ path('servicesorg') }}">
+                        <span class="glyphicon glyphicon-share-alt"></span>&nbsp;&nbsp;Retour aux S.O.
+                    </a>
                 </div>
                 <input type="hidden" name="valeurs" id="valeurs">
             </div>
@@ -77,42 +90,45 @@
                  A chaque fois qu'on clicque sur le bouton bleu une nouvelle etape de validation se crée
                  */
                 $('#contetapes').append('' +
-                '<div class="col-lg-2 well" ><div>Etape de validation</div><select class="selusers " multiple="multiple" style="width: 100%"><optgroup label="Groupes d\'utilisateurs">{% for userPack in userPacks %}<option  value="userpack-{{ userPack.id }}" data-type="groupe">{{ userPack.nom }}</option>{% endfor %}</optgroup><optgroup label="utilisateurs">{% for user in users %}<option  value="user-{{ user.id }}" data-type="user">{{ user.prenom }} {{ user.nom }}</option>{% endfor %}</optgroup></select></div>');
+                '<div class="col-lg-2 well"><div class="text-center"><h4>Etape de validation</h4></div><select class="selusers" multiple="multiple" style="width: 100%" data-etape="0"><optgroup label="Groupes d\'utilisateurs">{% for userPack in userPacks %}<option value="userpack-{{ userPack.id }}" data-type="groupe">{{ userPack.nom }}</option>{% endfor %}</optgroup><optgroup label="utilisateurs">{% for user in users %}<option value="user-{{ user.id }}" data-type="user">{{ user.prenom }} {{ user.nom }}</option>{% endfor %}</optgroup></select></div>');
                 $("select.selusers").select2();
 
             });
             var tabGeneral = [];
-            var tabEtape = [];
-            var ItemSelected = {};
             $('#form').submit(function(){
                 /*
                  * Pour chaque etape de validation créé on récupère les options sélectionnées
                  *
                  * */
                 $('select.selusers').each(function(){
-                    var tabEtape = [];
+
+                    var Etapes = {};
+                    Etapes.etape_id = $(this).data('etape');
+                    Etapes.etapes = [];
+
                     if($(this).val())
                     {
                         $(this).find(':selected').each(function(){
                             /*
                              * Pour chaque option selectionnée, on récupère son data-type(groupe ou user) et sa value (id du user ou du userPack)
                              * */
-                            var ItemSelected = {};
-                            ItemSelected.entite = $(this).data('type');
-                            ItemSelected.id = $(this).val();
-                            tabEtape.push(ItemSelected);
+                            Etapes.etapes.push({
+                                entite: $(this).data('type'),
+                                id: $(this).val()
+                            });
                         });
-                        tabGeneral.push(tabEtape);
+                    } else {
+                        e.preventDefault();
                     }
+                    tabGeneral.push(Etapes);
                 });
+
                 /*
                  * on met tout ça dans un tableau que l'on stringifie et qu'on met dans le hidden
                  * */
                 $('#valeurs').val(JSON.stringify(tabGeneral));
-                tabGeneral = [];
+//                tabGeneral = [];
             });
-
-
 
 
 
