--- a/src/Sesile/UserBundle/Resources/views/SO/new.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/SO/new.html.twig
@@ -18,9 +18,15 @@
             <br>
             <div class="row ">
                 <label for="nom" class="col-lg-2 control-label">Types de classeur</label>
-                <div class="col-lg-6">
+                <div class="col-lg-8">
                     {% for type in types %}
-                        <input type="checkbox" name="types[]" value="{{ type.id }}"/>&nbsp;&nbsp;{{ type.nom }}<br>
+                        {#<input type="checkbox" name="types[]" value="{{ type.id }}"/>&nbsp;&nbsp;{{ type.nom }}<br>#}
+                        <div class="col-lg-1 text-right">
+                            <input type="checkbox" name="types[]" value="{{ type.id }}" id="types_classeur_{{ type.id }}"/>
+                        </div>
+                        <div class="col-lg-2 text-left">
+                            <label for="types_classeur_{{ type.id }}">{{ type.nom }}</label>
+                        </div>
                     {% endfor %}
                 </div>
             </div>
@@ -28,8 +34,8 @@
             <div class="row">
                 <div class=" col-lg-12" style="height: 300px">
                     <div id="contetapes">
-                        <div class="col-lg-2 well" >
-                            <div>Etape de validation</div>
+                        <div class="col-lg-2 well">
+                            <div class="text-center"><h4>Etape de validation</h4></div>
                             <select class="selusers " multiple="multiple" style="width: 100%">
                                 <optgroup label="Groupes d'utilisateurs">
                                     {% for userPack in userPacks %}
@@ -44,17 +50,25 @@
                             </select>
                         </div>
                     </div>
+                    <div class="col-lg-2 text-center">
+                        <button type="button" class="btn btn-info btn-ajout-etape" id="addetape"><span class="glyphicon glyphicon-plus-sign"></span><br>Ajouter une étape<br>de validation</button>
+                    </div>
                 </div>
             </div>
-            <div class="form-group">
+            {#<div class="form-group">
                 <div class="col-lg-6">
                     <button type="button" class="btn btn-info" id="addetape"><span class="glyphicon glyphicon-plus-sign"></span>&nbsp;&nbsp;Ajouter une etape de validation</button>
                 </div>
-            </div>
+            </div>#}
 <br><br>
             <div class="form-group">
                 <div class="col-lg-6">
                     <input type="submit" class="btn btn-success" value="Enregistrer le service organisationnel">
+                </div>
+                <div class="col-lg-2">
+                    <a class="btn btn-primary pull-right" href="{{ path('servicesorg') }}">
+                        <span class="glyphicon glyphicon-share-alt"></span>&nbsp;&nbsp;Retour aux S.O.
+                    </a>
                 </div>
                 <input type="hidden" name="valeurs" id="valeurs">
             </div>
@@ -74,9 +88,12 @@
                 A chaque fois qu'on clicque sur le bouton bleu une nouvelle etape de validation se crée
                  */
                 $('#contetapes').append('' +
-                '<div class="col-lg-2 well" ><div>Etape de validation</div><select class="selusers " multiple="multiple" style="width: 100%"><optgroup label="Groupes d\'utilisateurs">{% for userPack in userPacks %}<option  value="userpack-{{ userPack.id }}" data-type="groupe">{{ userPack.nom }}</option>{% endfor %}</optgroup><optgroup label="utilisateurs">{% for user in users %}<option  value="user-{{ user.id }}" data-type="user">{{ user.prenom }} {{ user.nom }}</option>{% endfor %}</optgroup></select></div>');
+                '<div class="col-lg-2 well"><div class="text-center"><h4>Etape de validation</h4></div><select class="selusers " multiple="multiple" style="width: 100%"><optgroup label="Groupes d\'utilisateurs">{% for userPack in userPacks %}<option  value="userpack-{{ userPack.id }}" data-type="groupe">{{ userPack.nom }}</option>{% endfor %}</optgroup><optgroup label="utilisateurs">{% for user in users %}<option  value="user-{{ user.id }}" data-type="user">{{ user.prenom }} {{ user.nom }}</option>{% endfor %}</optgroup></select><button type="button" class="btn btn-danger btn-suppetape" id="suppetape"><span class="glyphicon glyphicon-minus-sign"></span> Supprimer cette étape</button></div>');
                 $("select.selusers").select2();
 
+            });
+            $(document).on('click','#suppetape',function() {
+                $(this).parent().remove();
             });
             var tabGeneral = [];
             var tabEtape = [];
