--- a/src/Sesile/UserBundle/Resources/views/UserPack/new.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/UserPack/new.html.twig
@@ -27,6 +27,11 @@
                 <div class="col-lg-6">
                     <input type="submit" class="btn btn-success" value="Enregistrer">
                 </div>
+                <div class="col-lg-2">
+                    <a class="btn btn-primary pull-right" href="{{ path('userpacks') }}">
+                        <span class="glyphicon glyphicon-share-alt"></span>&nbsp;&nbsp;Retour aux groupes
+                    </a>
+                </div>
                 <input type="hidden" name="valeurs" id="valeurs">
             </div>
         </form>
