commit webservice+ bug visionneuse

--- a/src/Sesile/MainBundle/Resources/views/Default/apropos.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/apropos.html.twig
@@ -6,7 +6,12 @@
             <span class="glyphicon glyphicon-comment"></span>
             &nbsp;&nbsp;&nbsp;À propos
         </div>
-        Voici la version de votre application :&nbsp; &nbsp; &nbsp; {{ majorversion }}.{{ buildnumber }}
+        Vous disposez de SESILE version :&nbsp; &nbsp; &nbsp; {{ majorversion }}.{{ buildnumber }}
+        <br><br>
+        Afficher la documentation concernant le patch 2.1: &nbsp; &nbsp; &nbsp; <a
+                href="{{ asset("/uploads/docs/MAJ2-1.pdf") }}" target="_blank"><img
+                    src="{{ asset("/images/imgpdf.png") }}" width="100px" height="100px"></a>
+
     </div>
 
 
