--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
@@ -51,10 +51,9 @@
             </div>
             <div id="contenttypedform"></div>
 	    <div class="btndemerde">
-	    <a href="{{ path('classeur') }}">
-		<button type="button" class="btn btn-default navbar-btn">
+	    <a href="{{ path('classeur') }}" class="btn btn-primary navbar-btn">
+            <span class="glyphicon glyphicon-share-alt"></span>
 		    Retour à la liste des classeur
-		</button>
 	    </a>
 	    </div>
             {#<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">#}
