Bis Résolutions des bugs  : 0002379 - 0002412

--- a/src/Sesile/DelegationsBundle/Resources/views/Default/ajout.html.twig
+++ b/src/Sesile/DelegationsBundle/Resources/views/Default/ajout.html.twig
@@ -46,7 +46,8 @@
                 <button type="submit" class="btn btn-success">
                     Enregistrer
                 </button>
-                <a href="{{ path('delegations_list') }}" class="btn btn-default navbar-btn">
+                <a href="{{ path('delegations_list') }}" class="btn btn-primary navbar-btn">
+                    <span class="glyphicon glyphicon-share-alt"></span>
                     Retour à la liste des délégations
                 </a>
             </div>
