Changement du texte des boutons

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/index.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/index.html.twig
@@ -9,7 +9,7 @@
         {% include 'SesileClasseurBundle:Classeur:liste.html.twig' %}
         <a href="{{ path('classeur_new') }}">
             <button type="button" class="btn btn-default navbar-btn">
-                Créer un classeur
+                Ajouter un classeur
             </button>
         </a>
         {% include 'SesileClasseurBundle:Classeur:legende.html.twig' %}
