--- a/src/Sesile/ClasseurBundle/Resources/views/TypeClasseur/index.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/TypeClasseur/index.html.twig
@@ -50,7 +50,7 @@
         </table>
         <a href="{{ path('new_type_classeur') }}">
             <button type="button" class="btn btn-default navbar-btn">
-                Créer un type de classeur
+                Ajouter un type de classeur
             </button>
         </a>
 
