--- a/src/Sesile/DelegationsBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/DelegationsBundle/Resources/views/Default/index.html.twig
@@ -10,7 +10,7 @@
         {% include 'SesileDelegationsBundle:Default:listemesdelegs.html.twig' %}
         <a href="{{ path('delegation_new') }}">
             <button type="button" class="btn btn-default navbar-btn">
-                Déléguer ses droits
+                Ajouter une délégation
             </button>
         </a>
     </div>
