--- a/src/Sesile/MainBundle/Resources/views/Collectivite/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Collectivite/index.html.twig
@@ -34,7 +34,7 @@
 
 	<a href="{{ path('new_collectivite') }}">
 	    <button type="button" class="btn btn-default navbar-btn">
-		Créer une collectivité
+		Ajouter une collectivité
 	    </button>
 	</a>
     </div>
