Conflicts: 	app/config/config_evolutions.yml

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
@@ -49,10 +49,9 @@
             </div>
             <div id="contenttypedform"></div>
             <div class="btndemerde">
-                <a href="{{ path('classeur') }}">
-                    <button type="button" class="btn btn-default navbar-btn">
-                        Retour à la liste des classeur
-                    </button>
+                <a href="{{ path('classeur') }}" class="btn btn-primary navbar-btn">
+                    <span class="glyphicon glyphicon-share-alt"></span>
+                    Retour à la liste des classeur
                 </a>
             </div>
         </form>
