--- a/src/Sesile/ClasseurBundle/Resources/views/TypeClasseur/index.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/TypeClasseur/index.html.twig
@@ -49,8 +49,8 @@
             </tbody>
         </table>
         <a href="{{ path('new_type_classeur') }}">
-            <button type="button" class="btn btn-primary navbar-btn">
-                Créer un type de classeur
+            <button type="button" class="btn btn-default navbar-btn">
+                Ajouter un type de classeur
             </button>
         </a>
 
