--- a/src/Sesile/UserBundle/Resources/views/SO/edit.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/SO/edit.html.twig
@@ -36,11 +36,11 @@
             <br>
             <div class="row">
                 <div class=" col-lg-12" style="height: 300px">
-                    <div id="contetapes">
+                    <div id="contetapes" class="ui-sortable">
                         {% for etape in service.etapeGroupes %}
 
-                        <div class="col-lg-2 well">
-                            <div class="text-center"><h4>Etape de validation</h4></div>
+                        <div class="col-lg-2 well etapes-circuit">
+                            <div class="text-center"><h4>Etape de validation {{ etape.id }}</h4></div>
                             {#<input type="hidden" name="etape_id" value="{{ etape.id }}">#}
                             <select class="selusers" multiple="multiple" style="width: 100%" data-etape="{{ etape.id }}">
                                 <optgroup label="Groupes d'utilisateurs">
@@ -54,6 +54,7 @@
                                     {% endfor %}
                                 </optgroup>
                             </select>
+                            <button type="button" class="btn btn-danger btn-suppetape" id="suppetape"><span class="glyphicon glyphicon-minus-sign"></span> Supprimer cette étape</button>
                         </div>
                         {% endfor %}
                     </div>
@@ -81,16 +82,27 @@
     </div>
     <script type="application/javascript" src="{{ asset("/js/select2.min.js") }}"></script>
     <link type="text/css" href="{{ asset("/css/select2.css") }}" rel="stylesheet"/>
+
+    <script type="text/javascript" src="{{ asset('/js/jquery-ui.min.js') }}"></script>
+    {#<script type="text/javascript" src="{{ asset('/js/circuit_etape.js') }}"></script>#}
+
     <script>
         $(document).ready(function() {
 
             $(".selusers").select2();
+
+            // Pour le bouton de suppression de l etape
+            $(document).on('click','#suppetape',function() {
+                $(this).parent().remove();
+            });
+
+
             $(document).on('click','#addetape',function(){
                 /*
                  A chaque fois qu'on clicque sur le bouton bleu une nouvelle etape de validation se crée
                  */
                 $('#contetapes').append('' +
-                '<div class="col-lg-2 well"><div class="text-center"><h4>Etape de validation</h4></div><select class="selusers" multiple="multiple" style="width: 100%" data-etape="0"><optgroup label="Groupes d\'utilisateurs">{% for userPack in userPacks %}<option value="userpack-{{ userPack.id }}" data-type="groupe">{{ userPack.nom }}</option>{% endfor %}</optgroup><optgroup label="utilisateurs">{% for user in users %}<option value="user-{{ user.id }}" data-type="user">{{ user.prenom }} {{ user.nom }}</option>{% endfor %}</optgroup></select></div>');
+                '<div class="col-lg-2 well"><div class="text-center"><h4>Etape de validation</h4></div><select class="selusers" multiple="multiple" style="width: 100%" data-etape="0"><optgroup label="Groupes d\'utilisateurs">{% for userPack in userPacks %}<option value="userpack-{{ userPack.id }}" data-type="groupe">{{ userPack.nom }}</option>{% endfor %}</optgroup><optgroup label="utilisateurs">{% for user in users %}<option value="user-{{ user.id }}" data-type="user">{{ user.prenom }} {{ user.nom }}</option>{% endfor %}</optgroup></select><button type="button" class="btn btn-danger btn-suppetape" id="suppetape"><span class="glyphicon glyphicon-minus-sign"></span> Supprimer cette étape</button></div>');
                 $("select.selusers").select2();
 
             });
@@ -128,6 +140,12 @@
                  * */
                 $('#valeurs').val(JSON.stringify(tabGeneral));
 //                tabGeneral = [];
+            });
+
+            $(function() {
+                $( "#contetapes" ).sortable({
+                    tolerance: "pointer"
+                }).disableSelection();
             });
 
 
