--- a/src/Sesile/UserBundle/Resources/views/SO/new.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/SO/new.html.twig
@@ -32,9 +32,9 @@
             </div>
             <br>
             <div class="row">
-                <div class=" col-lg-12" style="height: 300px">
-                    <div id="contetapes">
-                        <div class="col-lg-2 well">
+                <div class="col-lg-12" style="height: 300px">
+                    <div id="contetapes" class="ui-sortable">
+                        <div class="col-lg-2 well etapes-circuit">
                             <div class="text-center"><h4>Etape de validation</h4></div>
                             <select class="selusers " multiple="multiple" style="width: 100%">
                                 <optgroup label="Groupes d'utilisateurs">
@@ -48,6 +48,7 @@
                                     {% endfor %}
                                 </optgroup>
                             </select>
+                            <button type="button" class="btn btn-danger btn-suppetape" id="suppetape"><span class="glyphicon glyphicon-minus-sign"></span> Supprimer cette étape</button>
                         </div>
                     </div>
                     <div class="col-lg-2 text-center">
@@ -78,6 +79,7 @@
 
     </div>
     <script type="application/javascript" src="{{ asset("/js/select2.min.js") }}"></script>
+    <script type="text/javascript" src="{{ asset('/js/jquery-ui.min.js') }}"></script>
     <link type="text/css" href="{{ asset("/css/select2.css") }}" rel="stylesheet"/>
     <script>
         $(document).ready(function() {
@@ -88,7 +90,7 @@
                 A chaque fois qu'on clicque sur le bouton bleu une nouvelle etape de validation se crée
                  */
                 $('#contetapes').append('' +
-                '<div class="col-lg-2 well"><div class="text-center"><h4>Etape de validation</h4></div><select class="selusers " multiple="multiple" style="width: 100%"><optgroup label="Groupes d\'utilisateurs">{% for userPack in userPacks %}<option  value="userpack-{{ userPack.id }}" data-type="groupe">{{ userPack.nom }}</option>{% endfor %}</optgroup><optgroup label="utilisateurs">{% for user in users %}<option  value="user-{{ user.id }}" data-type="user">{{ user.prenom }} {{ user.nom }}</option>{% endfor %}</optgroup></select><button type="button" class="btn btn-danger btn-suppetape" id="suppetape"><span class="glyphicon glyphicon-minus-sign"></span> Supprimer cette étape</button></div>');
+                '<div class="col-lg-2 well etapes-circuit"><div class="text-center"><h4>Etape de validation</h4></div><select class="selusers " multiple="multiple" style="width: 100%"><optgroup label="Groupes d\'utilisateurs">{% for userPack in userPacks %}<option  value="userpack-{{ userPack.id }}" data-type="groupe">{{ userPack.nom }}</option>{% endfor %}</optgroup><optgroup label="utilisateurs">{% for user in users %}<option  value="user-{{ user.id }}" data-type="user">{{ user.prenom }} {{ user.nom }}</option>{% endfor %}</optgroup></select><button type="button" class="btn btn-danger btn-suppetape" id="suppetape"><span class="glyphicon glyphicon-minus-sign"></span> Supprimer cette étape</button></div>');
                 $("select.selusers").select2();
 
             });
@@ -127,6 +129,11 @@
             });
 
 
+            $(function() {
+                $( "#contetapes" ).sortable({
+                    tolerance: "pointer"
+                }).disableSelection();
+            });
 
 
 
