--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
@@ -30,7 +30,7 @@
                         <div class="col-lg-5">
                             <select id="userGroupe" name="userGroupe" class="form-control" required="required">
                                 {% for userGroupe in userGroupes %}
-                                    <option value="{{ userGroupe.id }}" data-id="{{ userGroupe.id }}" data-ordre="{{ userGroupe.ordre }}">{{ userGroupe.name }}</option>
+                                    <option value="{{ userGroupe.id }}" data-id="{{ userGroupe.id }}" {#data-ordre="{{ userGroupe.ordre }}"#}>{{ userGroupe.name }}</option>
                                 {% endfor %}
                             </select>
                         </div>
