commit debut datatable + etapeValidante lors de la création d'un classeur

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste_a_valider.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste_a_valider.html.twig
@@ -61,7 +61,7 @@
                         aTargets: [5],
                         sClass: "center",
                         "mRender": function ( data, type, full ) {
-                            return '<span class="glyphicon statut_' + data + '"></span>';
+                            return '<span class="glyphicon statut_' + data + '">'+data+'</span>';
                         }
                     },
                     {
