--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/a_valider.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/a_valider.html.twig
@@ -3,76 +3,10 @@
 {% block content %}
     <div class="bloc_page">
         <div class="titre_page">
-            <span class="glyphicon glyphicon-thumbs-up"></span>
-            &nbsp;&nbsp;&nbsp;Liste des classeurs à valider
+            <span class="glyphicon glyphicon-list"></span>
+            &nbsp;&nbsp;&nbsp;Liste des classeurs
         </div>
-        {% include 'SesileClasseurBundle:Classeur:liste.html.twig' %}
+        {% include 'SesileClasseurBundle:Classeur:liste_a_valider.html.twig' %}
+        {% include 'SesileClasseurBundle:Classeur:legende.html.twig' %}
     </div>
-
-<script type="application/javascript" src="{{ asset("/datatables/jquery.dataTables.min.js") }}"></script>
-    <link type="text/css" href="{{ asset("/datatables/css/jquery.dataTables.css") }}" rel="stylesheet"/>
-    <script type="application/javascript">
-	$(document).ready(function () {
-	    $(".dtables").dataTable({
-            processing: true,
-            serverSide: true,
-            ajax: "{{ path("ajax_a_valider") }}",
-            oLanguage: {
-                sSearch: "Rechercher&nbsp;",
-                sInfo: "Classeur  _START_ &agrave; _END_ sur _TOTAL_",
-                sInfoEmpty: "Affichage de l'&eacute;lement 0 &agrave; 0 sur 0 &eacute;l&eacute;ments",
-                sInfoFiltered: "(filtr&eacute; de _MAX_ &eacute;l&eacute;ments au total)",
-                sZeroRecords: "Aucun enregistrement &agrave; afficher",
-                sLengthMenu: "Afficher _MENU_ classeurs par page",
-                oPaginate: {
-                    sFirst: "",
-                    sPrevious: "",
-                    sNext: "",
-                    sLast: ""
-                }
-            },
-            order: [[ 1, "desc" ]],
-            iDisplayLength: 15,
-            aLengthMenu: [15, 30, 50, 100],
-            sDom: 'lft<"footer_datatables"ip>',
-            aoColumnDefs: [
-                {
-                    aTargets: [1],
-                    sClass: "center"
-                },
-                {
-                    aTargets: [2],
-                    sClass: "center"
-                },
-                {
-                    aTargets: [5],
-                    sClass: "center",
-                    "mRender": function ( data, type, full ) {
-                        return '<span class="glyphicon statut_' + data + '"></span>';
-                    }
-                },
-                {
-                    aTargets: [6],
-                    sClass: "center",
-                    bSortable: false,
-                    "mRender": function ( data, type, full ) {
-                        var retour = '<a class="col-sm-6" href="' + Routing.generate('classeur_edit', {id: data.id}) + '"><span class="glyphicon glyphicon-pencil"></span></a>';
-                        if (data.idDoc) {
-                            retour += '<a class="col-sm-6"href="' + Routing.generate('visu', {id: data.idDoc}) + '"><span class="glyphicon glyphicon-eye-open"></span></a>';
-                        }
-                        return retour;
-                    }
-                }
-            ],
-            sPaginationType: "full_numbers",
-            fnRowCallback: function (nRow, aData, iDisplayIndex, iDisplayIndexFull) {
-                $(nRow).addClass("classeur-row");
-                $(nRow).click(function (e) {
-                    document.location.href = Routing.generate('classeur_edit', {id: aData[6].id});
-                });
-                return nRow;
-            }
-        });
-	});
-    </script>
-    {% endblock %}
+{% endblock %}
